# libretro_core_sdl2_compact_sample02

./: CMakeLists.txt  README.md  build.bat
src/: main.c
